objects/CRM_MemberTypeReferenceData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_IsExternalUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then external upload options on audience selection screen will be enabled</description>
        <inlineHelpText>If checked then external upload options on audience selection screen will be enabled</inlineHelpText>
        <label>Is External Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_IsParentCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Is_EncounterEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox enables encounter buttons to will be enable for audience selection criteria</description>
        <inlineHelpText>Checkbox which enables encounter buttons to will be enable for audience selection criteria</inlineHelpText>
        <label>Is Encounter Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Member Type Reference Data</label>
</CustomObject>